# crossword-builder

./: .gitignore  README.md  package-lock.json  package.json
back_end/: README.md  package-lock.json  package.json  pyproject.toml  tsconfig.json
back_end/config/: production.json
back_end/crossword_builder_api/: cors.py  custom_typing.py  main.py  settings.py
back_end/crossword_builder_api/lib/: board.py  matcher.py  pattern.py  subpatterns.py  suggestions.py  words.py  words_provider.py
back_end/crossword_builder_api/models/: suggestions.py  suggestions_lists.py
back_end/crossword_builder_api/utilities/: alphabet.py  character.py  math.py
back_end/public/: index.html
back_end/src/: app.js  app.ts  client.js  constants.js  declarations.ts  validators.ts
back_end/src/lib/: board.js  board.ts  subpatterns.js  subpatterns.ts  suggestions.js  suggestions.ts  words.js  words.ts
back_end/src/services/: index.js  index.ts  suggestions_lists.class.js  words.class.js
back_end/src/utilities/: alphabet.js  alphabet.ts  arrays.js  board.js  math.js  math.ts  strings.js  strings.ts  subpatterns.js  suggestions.js
back_end/test/: app.test.js  app.test.ts  client.test.js
back_end/test/lib/: board.test.js  board.test.ts  subpatterns.test.js  subpatterns.test.ts  suggestions.test.js  suggestions.test.ts  words.test.js  words.test.ts
back_end/test/services/: suggestions_lists.test.js  suggestions_lists.test.ts  words.test.js
back_end/test/utilities/: alphabet.test.js  alphabet.test.ts  (+9 more)
back_end/word_lists/: words6.txt  words7.txt  words8.txt  words9.txt
(+240 files in other folders)
