[tool.poetry]
name = "crossword_builder_api"
version = "0.1.0"
description = ""
authors = ["Taylor Hummon <taylor.hummon@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.112.0"}
pydantic = "^2.8.2"
pytest = "^8.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
